--- a/public/bloglist.html
+++ b/public/bloglist.html
@@ -1,6 +1,7 @@
 <div class="heading">My blogs</div>
 <ul>
 	<li ng-repeat="blog in blogs">
-		<a href="#">{{blog.title}}</a>
+		<!--<a href="#">{{blog.title}}</a>-->
+		{{blog.title}}
 	</li>
 </ul>
