--- a/public/bloglist.html
+++ b/public/bloglist.html
@@ -1,6 +1,6 @@
 <div class="heading">My blogs</div>
 <ul>
 	<li ng-repeat="blog in blogs">
-		<a href="#/blogs/">{{blog.title}}</a>
+		<a href="#/blogs/:{{blog.id}}">{{blog.title}}</a>
 	</li>
 </ul>
