--- a/public/blog.html
+++ b/public/blog.html
@@ -1,2 +1,5 @@
-<div class="heading">{{blog.title}}</div>
-{{blog.text}}
+<div class="heading">{{title}}</div>
+{{text}}
+<div class="date">
+	Posted on: {{date}}
+</div>
