--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,9 @@
 						-->
 					</div>
 				</div>
+				<div class="footer">
+					Designed, developed and maintained by: Ayon Ghosh &copy; 2013
+				</div>
 			</div>
 			
 			<!--
