--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
 		<!-- Angular.js -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular-route.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular-sanitize.js"></script>
 		
 		<script src="js/router.js"></script>
 		<script src="js/controllers.js"></script>
