--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="css/style.css"/>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Lato:400,300italic' rel='stylesheet' type='text/css'>
 		
 	</head>
 	<body>
@@ -19,7 +20,7 @@
 			</div>
 			<div id="about">
 				<div class="me">
-					<a href="http://about.me/ayonghosh">
+					<a href="#/about">
 						<img src="images/me.jpg"/>
 					</a>
 					<div class="aboutme">
