--- a/public/about.html
+++ b/public/about.html
@@ -19,4 +19,7 @@
 		but no: I'm still not gonna tell you the answer to the Ultimate Question. 
 		So, good luck finding!
 	</p>
+	<p>
+		Well, here's a quote of mine: <i>"Good enough is not good enough!"</i>
+	</p>
 </div>
