--- a/public/bloglist.html
+++ b/public/bloglist.html
@@ -1,5 +1,5 @@
 <div class="heading">My blogs</div>
-<ul>
+<ul class="blogs">
 	<li ng-repeat="blog in blogs">
 		<a href="#/blogs/:{{blog.id}}">{{blog.title}}</a>
 	</li>
