--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<div class="container">
 			<div id="main">
-				<div class="blog"><a href="#">blogs</a></div>
+				<div class="blog"><a href="#/blogs">blogs</a></div>
 			</div>
 			<div id="butterfly">
 				<img src="images/butterfly.png"/>
