--- a/public/about.html
+++ b/public/about.html
@@ -22,4 +22,21 @@
 	<p>
 		Well, here's a quote of mine: <i>"Good enough is not good enough!"</i>
 	</p>
+	<br>
+	<br>
+	<p>
+		Some fun stuff I did...
+		<ul class="blogs">
+			<li>
+				<a href="http://ghostpop.herokuapp.com">GhostPOP Game</a>
+			</li>
+			<li>
+				<a href="/clock">Arc Clock</a>
+			</li>
+		</ul>
+	</p>
+	<br>
+	<p>
+		Find more on my <a href="http://github.com/ayonghosh">GitHub</a>. 
+	</p>
 </div>
