--- a/public/about.html
+++ b/public/about.html
@@ -25,16 +25,17 @@
 	<br>
 	<br>
 	<p>
-		Some fun stuff I did...
+		Some fun stuff I do...
 		<ul class="blogs">
 			<li>
 				<a href="http://ghostpop.herokuapp.com">GhostPOP Game</a>
 			</li>
 			<li>
-				<a href="/clock">Arc Clock</a>
+				<a href="/clock.html">Arc Clock</a>
 			</li>
 		</ul>
 	</p>
+	<br>
 	<br>
 	<p>
 		Find more on my <a href="http://github.com/ayonghosh">GitHub</a>. 
