--- a/public/about.html
+++ b/public/about.html
@@ -26,15 +26,18 @@
 	<br>
 	<p>
 		Some fun stuff I do...
-		<ul class="blogs">
-			<li>
-				<a href="http://ghostpop.herokuapp.com">GhostPOP Game</a>
-			</li>
-			<li>
-				<a href="/clock.html">Arc Clock</a>
-			</li>
-		</ul>
 	</p>
+	<ul class="projects">
+		<li>
+			<a href="http://ghostpop.herokuapp.com">GhostPOP Game</a>
+		</li>
+		<li>
+			<a href="/clock.html">Arc Clock</a>
+		</li>
+		<li>
+			<a href="/jsQwerty.html">jsQwerty</a>
+		</li>
+	</ul>
 	<br>
 	<br>
 	<p>
