--- a/public/about.html
+++ b/public/about.html
@@ -25,22 +25,21 @@
 	<br>
 	<br>
 	<p>
-		Some fun stuff I do...
+		Some fun stuff I do... Find more on my <a href="http://github.com/ayonghosh">GitHub</a>. 
+	</p>
 	</p>
 	<ul class="projects">
 		<li>
-			<a href="http://ghostpop.herokuapp.com">GhostPOP Game</a>
+			<a href="http://ghostpop.herokuapp.com" title="A simple HTML5 game using canvas, sound and storage APIs">GhostPOP Game</a>
 		</li>
 		<li>
-			<a href="/clock.html">Arc Clock</a>
+			<a href="/clock.html" title="An arc clock using canvas designed and created by me">Arc Clock</a>
 		</li>
 		<li>
-			<a href="/jsQwerty.html">jsQwerty</a>
+			<a href="/jsQwerty.html" title="A reusable virtual keyboard plugin in JavaScript">jsQwerty</a>
 		</li>
 	</ul>
 	<br>
 	<br>
-	<p>
-		Find more on my <a href="http://github.com/ayonghosh">GitHub</a>. 
-	</p>
+	
 </div>
