notification.js added

--- a/public/about.html
+++ b/public/about.html
@@ -38,6 +38,9 @@
 		<li>
 			<a href="/jsQwerty.html" title="A reusable virtual keyboard plugin in JavaScript">jsQwerty</a>
 		</li>
+		<li>
+			<a href="/notificationdemo.html" title="A reusable cross browser JavaScript plugin that mimics webkit notifications">notification.js</a>
+		</li>
 	</ul>
 	<br>
 	<br>
