added Map Translator

--- a/public/about.html
+++ b/public/about.html
@@ -41,6 +41,9 @@
 		<li>
 			<a href="/notificationdemo.html" title="A reusable cross browser JavaScript plugin that mimics webkit notifications">notification.js</a>
 		</li>
+		<li>
+			<a href="http://maptranslate.herokuapp.com" title="A webapp that spices up text translation using an interactive map">Map Translator</a>
+		</li>
 	</ul>
 	<br>
 	<br>
