--- a/public/notificationdemo.html
+++ b/public/notificationdemo.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Browser Notification Demo</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="notification.css"/>
-		<script src="notification.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/notification.css"/>
+		<script src="js/notification.js"></script>
 	</head>
 	<body style="font-family: sans-serif; padding: 20px">
 		<h3>Create notification</h3>
