Added Big Blue Ball

--- a/public/about.html
+++ b/public/about.html
@@ -44,6 +44,9 @@
 		<li>
 			<a href="http://maptranslate.herokuapp.com" title="A webapp that spices up text translation using an interactive map">Map Translator</a>
 		</li>
+		<li>
+			<a href="http://bigblueball.herokuapp.com" title="An ongoing experiment with Three.js on Chrome: Earth from above the ISS!">Big Blue Ball</a>
+		</li>
 	</ul>
 	<br>
 	<br>
